# artes-melina-loja-integrada-etl

./: .env  .env.example  .env.local.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  etl.py  pyproject.toml
.devcontainer/: devcontainer.json
